--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
-
 {
-  "homepage": "http://hurricanejay.github.io/hurricanejay.github.io",
+  "homepage": "http://hurricanejay.github.io/",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
@@ -17,12 +16,12 @@
     "react-spring": "^8.0.27"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b master -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
